--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,48 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Login - Brand</title>
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
+</head>
+<body class="vh-100 bg-secondary">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-9 col-lg-12 col-xl-10">
+      <div class="card shadow-lg border-0 my-5">
+        <div class="card-body p-0">
+          <div class="row">
+            <div class="col-lg-6 d-none d-lg-flex pe-0">
+              <div class="flex-grow-1 card-login-img"></div>
+            </div>
+            <div class="col-lg-6">
+              <div class="p-5">
+                <h4 class="text-center text-dark mb-4">Welkom terug!</h4>
+                <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                  <input class="mb-3 form-control form-control-user" type="email"
+                         placeholder="Email adres" formControlName="email" name="email">
+                  <input class="mb-3 form-control form-control-user" type="password"
+                         placeholder="Wachtwoord" formControlName="password" name="password">
+                  <div class="mb-3 small form-check">
+                    <input class="form-check-input" type="checkbox" id="loginCheck" formControlName="rememberMe">
+                    <label class="form-check-label" for="loginCheck">Remember Me</label>
+                  </div>
+                  <button class="btn btn-primary d-block btn-user w-100 mb-2" type="submit" [disabled]="!loginForm.valid">
+                    Login
+                  </button>
+                </form>
+                <div class="text-center">
+                  <a class="small" href="#">Wachtwoord herstellen</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
