--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+
+$primary: #0e1922;
+$secondary: #e76352;
+
+$theme-colors: map-merge($theme-colors, (
+  "primary": $primary,
+  "secondary": $secondary
+));
+
 @import "bootstrap/scss/bootstrap";
