--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>iQuestion</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+  </head>
+
+  <body>
+    <app-navigation></app-navigation>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+  </body>
+</html>
