--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
                   </button>
                 </form>
                 <div class="text-center">
-                  <a class="small" href="#">Wachtwoord herstellen</a>
+                  <a class="small" href="/change-password">Wachtwoord herstellen</a>
                 </div>
               </div>
             </div>
