Feat: add password reset

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Login - Brand</title>
+    <title>Verander wachtwoord - iQuestion</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap"
@@ -17,10 +17,21 @@
       <div class="row justify-content-center">
         <div class="col-md-9 col-lg-12 col-xl-10">
           <div class="card shadow-lg border-0 my-5">
-            <div class="card-body p-0">
+            <div class="card-body p-0" *ngIf="!showTokenResetBody">
               <div class="p-5">
                 <h4 class="text-center text-dark">Wachtwoord vergeten?</h4>
                 <p class="text-center text-dark mb-4">Ik help je even!</p>
+                <div *ngIf="showAlert">
+                  <div
+                    class="alert alert-danger d-flex align-items-center"
+                    role="alert"
+                  >
+                    <div>
+                      <strong>Foutmelding: </strong
+                      >{{ statusMessage || "Onbekende fout opgetreden!" }}
+                    </div>
+                  </div>
+                </div>
                 <form
                   [formGroup]="changePasswordForm"
                   (ngSubmit)="onChangePassword()"
@@ -31,6 +42,8 @@
                     placeholder="Email adres"
                     formControlName="email"
                     name="email"
+                    ngModel
+                    [email]="true"
                   />
                   <button
                     class="btn btn-primary d-block btn-user w-100 mb-2"
@@ -44,6 +57,57 @@
                   <p class="small">
                     Weet je je wachtwoord weer ga dan een:
                     <a href="/login">Stapje terug</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card-body p-0" *ngIf="showTokenResetBody">
+              <div class="p-5">
+                <h4 class="text-center text-dark">Nieuw wachtwoord</h4>
+                <p class="text-center text-dark mb-4">Kies een veilige...</p>
+                <div *ngIf="showAlert">
+                  <div
+                    class="alert alert-danger d-flex align-items-center"
+                    role="alert"
+                  >
+                    <div>
+                      <strong>Foutmelding: </strong>{{ statusMessage || "Onbekende fout opgetreden!" }}
+                    </div>
+                  </div>
+                </div>
+                <form
+                  [formGroup]="resetTokenForm"
+                  (ngSubmit)="onResetPassword()"
+                >
+                  <input
+                    class="mb-3 form-control form-control-user"
+                    type="text"
+                    placeholder="Token"
+                    formControlName="resetToken"
+                    name="resetToken"
+                    ngModel
+                  />
+                  <input
+                    class="mb-3 form-control form-control-user"
+                    type="password"
+                    placeholder="Nieuw wachtwoord"
+                    formControlName="newPassword"
+                    name="newPassword"
+                    ngModel
+                  />
+                  <button
+                    class="btn btn-primary d-block btn-user w-100 mb-2"
+                    type="submit"
+                    [disabled]="!resetTokenForm.valid"
+                  >
+                    Vraag nieuw wachtwoord aan!
+                  </button>
+                </form>
+                <div class="text-center">
+                  <p class="small">
+                    Verkeerde email ingevoerd?
+                    <a (click)="this.showTokenResetBody=false" href="">Stapje terug</a>
                   </p>
                 </div>
               </div>
