fix: Changepassword has user guidance

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -23,11 +23,11 @@
                 <p class="text-center text-dark mb-4">Ik help je even!</p>
                 <div *ngIf="showAlert">
                   <div
-                    class="alert alert-danger d-flex align-items-center"
+                    class="alert alert-{{alertType}} d-flex align-items-center"
                     role="alert"
                   >
                     <div>
-                      <strong>Foutmelding: </strong
+                      <strong *ngIf="alertType == 'danger'">Foutmelding: </strong
                       >{{ statusMessage || "Onbekende fout opgetreden!" }}
                     </div>
                   </div>
@@ -65,14 +65,13 @@
             <div class="card-body p-0" *ngIf="showTokenResetBody">
               <div class="p-5">
                 <h4 class="text-center text-dark">Nieuw wachtwoord</h4>
-                <p class="text-center text-dark mb-4">Kies een veilige...</p>
                 <div *ngIf="showAlert">
                   <div
-                    class="alert alert-danger d-flex align-items-center"
+                    class="alert alert-{{alertType}} d-flex align-items-center"
                     role="alert"
                   >
                     <div>
-                      <strong>Foutmelding: </strong>{{ statusMessage || "Onbekende fout opgetreden!" }}
+                      <strong *ngIf="alertType == 'danger'">Foutmelding: </strong>{{ statusMessage || "Onbekende fout opgetreden!" }}
                     </div>
                   </div>
                 </div>
