Feat: created overview that shows all users

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,7 +3,7 @@
       <div class="col-1 d-flex justify-content-center">
         <div id="sidebar" class="sidenav" [ngStyle]="{'width': 'navbarWidth'}">
           <a routerLink="/questionnaires"><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a>
-          <a routerLink="/users"><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a>
+          <a routerLink="/user"><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a>
         </div>
       </div>
     </div>
@@ -36,6 +36,6 @@
         </div>
         </div>
     <div class="container">
-      
+
     </div>
   </header>
