refactor: remove jquery

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <header class="p-3 text-bg-dark">
     <div class="row">
       <div class="col-1 d-flex justify-content-center">
-        <div id="sidebar" class="sidenav" [ngStyle]="{'width': 'navbarWidth'}">
+        <div [ngClass]="{ 'open': !navOpen, 'closed': navOpen }" id="sidebar" class="sidenav">
           <a routerLink="/questionnaires"><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a>
           <a routerLink="/users"><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a>
         </div>
@@ -11,6 +11,7 @@
         class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
       >
         <button
+          (click)="navOpen=!navOpen"
           id="hamburgerButton"
           class="navbar-toggler hamburger-button bi bi-list"
           type="button"
