--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 600px) {
-    #sidebar {
-        width: 0px;
+    .sidenav {
+        width: 0px; 
     }
     #hamburgerButton {
         display: block;
@@ -8,7 +8,7 @@
 }
 
 @media only screen and (min-width: 600px) {
-    #sidebar {
+    .sidenav {
         width: 250px;
     }
     #hamburgerButton {
@@ -18,7 +18,6 @@
 
 .sidenav {
   height: 100%;
-  width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -28,21 +27,29 @@
   transition: 0.5s;
   padding-top: 60px;
   box-shadow: 0px 0px 8px #888888;
-}
 
-.sidenav a {
-  padding: 8px 8px 8px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #f1f1f1;
-  display: block;
-  transition: 0.3s;
-}
+  &.open {
+    width: 250px;
+  }
 
-.sidenav a:hover {
-  color: #818181;
-}
+  .closed {
+    width: 0;
+  }
 
-.sidenav::-webkit-scrollbar {
-  display: none;
+  a {
+    padding: 8px 8px 8px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #f1f1f1;
+    display: block;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    color: #818181;
+  }
+
+  .sidenav::-webkit-scrollbar {
+    display: none;
+  }
 }
