--- a/src/app/user/overview/overview.component.html
+++ b/src/app/user/overview/overview.component.html
@@ -15,7 +15,7 @@
     <th>{{ i + 1 }}</th>
     <td>{{ user.name }}</td>
     <td>{{ user.role }}</td>
-    <td>{{ user.organisation }}</td>
+    <td>{{ user.organization }}</td>
     <td>{{ user.email }}</td>
     <td class="text-nowrap">
       <a class="tableIcon">
