--- a/src/app/user/create/create.component.html
+++ b/src/app/user/create/create.component.html
@@ -1,26 +1,28 @@
 <form [formGroup]="registerForm" (ngSubmit)="createUser()">
   <div class="mb-3">
     <label for="userEmailInput" class="form-label">Email addres</label>
-    <input type="email" class="form-control" id="userEmailInput" formControlName="inputEmail">
+    <input type="email" class="form-control" id="userEmailInput" formControlName="registerEmail">
   </div>
   <div class="mb-3">
     <label for="userNameInput" class="form-label">Naam</label>
-    <input type="email" class="form-control" id="userNameInput" formControlName="inputName">
+    <input type="email" class="form-control" id="userNameInput" formControlName="registerName">
   </div>
   <div class="mb-3">
     <label for="userOrganizationInput" class="form-label">Organisatie</label>
-    <input type="email" class="form-control" id="userOrganizationInput" formControlName="inputOrganization">
+    <input type="email" class="form-control" id="userOrganizationInput" formControlName="registerOrganization">
   </div>
   <label for="userRoleInput" class="form-label">Rol</label>
-  <select id="userRoleInput" class="form-select" aria-label="Default select example" formControlName="inputRole">
+  <select id="userRoleInput" class="form-select" aria-label="Default select example" formControlName="registerRole">
     <option value="SPINE_USER">Spine gebruiker</option>
     <option value="SPINE_ADMIN">Spine administrator</option>
     <option value="CAREGIVER">Zorgverlener</option>
   </select>
-  <hr>
-  <button type="submit" class="mb-2 btn btn-primary" [disabled]="!registerForm.valid">
+  <button type="submit" class="m-2 btn btn-primary" [disabled]="!registerForm.valid">
     Create User
   </button>
 </form>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <button type="button" class="btn btn-primary" routerLink="/userOverview">Gebruiker Overzicht</button>
+</div>
 
 
