--- a/src/app/user/overview/overview.component.html
+++ b/src/app/user/overview/overview.component.html
@@ -48,5 +48,5 @@
   </tbody>
 </table>
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  <button type="button" class="btn btn-primary">Creëer gebruiker</button>
+  <button type="button" class="btn btn-primary" routerLink="/userCreate">Creëer gebruiker</button>
 </div>
