--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -20,15 +20,14 @@
             <div class="col-lg-6">
               <div class="p-5">
                 <h4 class="text-center text-dark mb-4">Welkom terug!</h4>
+                <div class="alert alert-danger" *ngIf="error">
+                  <p class="m-0">{{error}}</p>
+                </div>
                 <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
                   <input class="mb-3 form-control form-control-user" type="email"
                          placeholder="Email adres" formControlName="email" name="email">
                   <input class="mb-3 form-control form-control-user" type="password"
                          placeholder="Wachtwoord" formControlName="password" name="password">
-                  <div class="mb-3 small form-check">
-                    <input class="form-check-input" type="checkbox" id="loginCheck" formControlName="rememberMe">
-                    <label class="form-check-label" for="loginCheck">Remember Me</label>
-                  </div>
                   <button class="btn btn-primary d-block btn-user w-100 mb-2" type="submit" [disabled]="!loginForm.valid">
                     Login
                   </button>
