--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>iQuestion</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-  </head>
+<div *ngIf="isAuthenticated">
+  <app-navigation></app-navigation>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
 
-  <body>
-    <app-navigation></app-navigation>
-    <main>
-        <router-outlet></router-outlet>
-    </main>
-  </body>
-</html>
+<app-login *ngIf="!isAuthenticated"></app-login>
