--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -18,7 +18,7 @@
     <option value="CAREGIVER">Zorgverlener</option>
   </select>
   <button type="submit" class="m-2 btn btn-primary" [disabled]="!registerForm.valid">
-    Create User
+    Creëer gebruiker
   </button>
 </form>
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
