fix: Router issues after merge

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -25,7 +25,7 @@
                     </button>
                   </form>
                   <div class="text-center">
-                    <a class="small" href="#">Wachtwoord herstellen</a>
+                    <a class="small" routerLink="/change-password">Wachtwoord herstellen</a>
                   </div>
                 </div>
               </div>
