FIX!: navbar now works properly with router

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -46,3 +46,21 @@
 .sidenav::-webkit-scrollbar {
   display: none;
 }
+
+@media only screen and (max-width: 600px) {
+  main {
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  main {
+    margin-left: 280px;
+    margin-top: 20px;
+  }
+}
+
+main {
+  margin-right: 16px;
+}
