Fix: minor spelling mistakes

--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -4,12 +4,12 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">#</th>
+          <th scope="col">ID</th>
           <th scope="col">Naam</th>
           <th scope="col">Aangemaakt</th>
           <th scope="col">Ingevuld</th>
           <th scope="col">Auteur</th>
-          <th scope="col">Exporteer / Verwijder</th>
+          <th scope="col">Acties</th>
         </tr>
       </thead>
       <tbody>
