--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -4,12 +4,12 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">#</th>
+          <th scope="col">ID</th>
           <th scope="col">Naam</th>
           <th scope="col">Rol</th>
           <th scope="col">Organisatie</th>
           <th scope="col">Email</th>
-          <th scope="col">Aanpassen / Verwijderen</th>
+          <th scope="col">Acties</th>
         </tr>
       </thead>
       <tbody>
