Fix: add navigation to create and edit user

--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -1,3 +1,4 @@
+<app-navigation>
 <form [formGroup]="registerForm" (ngSubmit)="createUser()">
   <div class="mb-3">
     <label for="userEmailInput" class="form-label">Email addres</label>
@@ -24,5 +25,5 @@
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
   <button type="button" class="btn btn-primary" routerLink="/userOverview">Gebruiker Overzicht</button>
 </div>
-
+</app-navigation>
 
