--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,47 +1,52 @@
 <header class="p-3 text-bg-dark">
-    <div class="row">
-      <div class="col-1 d-flex justify-content-center">
-        <div [ngClass]="{ 'open': !navOpen, 'closed': navOpen }" id="sidebar" class="sidenav">
-          <a routerLink="/questionnaires"><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a>
-          <a routerLink="/users"><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-    <div
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+  <div class="row">
+    <div class="col-1 d-flex justify-content-center">
+      <div
+        [ngClass]="{ open: !navOpen, closed: navOpen }"
+        id="sidebar"
+        class="sidenav"
       >
-        <button
-          (click)="navOpen=!navOpen"
-          id="hamburgerButton"
-          class="navbar-toggler hamburger-button bi bi-list"
-          type="button"
-          data-toggle="collapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-          style="z-index: 2"
-        ></button>
-        <div
-          class="d-flex flex-row align-items-center navbar-nav ms-auto justify-content-md-end mb-2 mb-lg-0 text-white text-decoration-none"
+        <a routerLink="/questionnaires"
+          ><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a
         >
-        <div ngbDropdown class="d-inline-block">
-          <button type="button" class="btn btn-light" id="dropdownBasic1" ngbDropdownToggle>
-            Jesse de Zwart&nbsp;&nbsp;<i
-                class="bi bi-person-fill vAlignIcon"
-              ></i>
-          </button>
-          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button ngbDropdownItem>Bewerk profiel</button>
-            <button ngbDropdownItem>Uitloggen</button>
-          </div>
-          </div>
-        </div>
+        <a routerLink="/users"
+          ><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a
+        >
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+  >
+    <button
+      (click)="navOpen = !navOpen"
+      id="hamburgerButton"
+      class="navbar-toggler hamburger-button bi bi-list"
+      type="button"
+      data-toggle="collapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+      style="z-index: 2"
+    ></button>
+    <div
+      class="d-flex flex-row align-items-center navbar-nav ms-auto justify-content-md-end mb-2 mb-lg-0 text-white text-decoration-none"
+    >
+      <div ngbDropdown class="d-inline-block">
+        <button
+          type="button"
+          class="btn btn-light"
+          id="dropdownBasic1"
+          ngbDropdownToggle
+        >
+          Jesse de Zwart&nbsp;&nbsp;<i class="bi bi-person-fill vAlignIcon"></i>
+        </button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <button ngbDropdownItem>Bewerk profiel</button>
+          <button ngbDropdownItem>Uitloggen</button>
         </div>
       </div>
     </div>
   </div>
-  <div class="container">
-
-  </div>
+  <div class="container"></div>
 </header>
