--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="vh-100 bg-secondary">
+<div class="vh-100 bg-dark">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-9 col-lg-12 col-xl-10">
@@ -42,7 +42,7 @@
               <div class="text-center">
                 <p class="small">
                   Weet je je wachtwoord weer ga dan een:
-                  <a href="/login">Stapje terug</a>
+                  <a class="text-decoration-none" routerLink="/login">Stapje terug</a>
                 </p>
               </div>
             </div>
@@ -84,14 +84,14 @@
                   type="submit"
                   [disabled]="!resetTokenForm.valid"
                 >
-                  Vraag nieuw wachtwoord aan!
+                  Veranderen maar!
                 </button>
               </form>
               <div class="text-center">
                 <p class="small">
                   Verkeerde email ingevoerd?
-                  <a (click)="this.showTokenResetBody = false" href=""
-                    >Stapje terug</a
+                  <a (click)="this.showTokenResetBody = false" routerLink="#" class="text-decoration-none">
+                    Stapje terug</a
                   >
                 </p>
               </div>
