--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<header class="p-3 text-bg-primary">
+<header class="p-3 text-bg-dark">
   <div class="row">
     <div class="col-1 d-flex justify-content-center">
       <div
@@ -6,10 +6,10 @@
         id="sidebar"
         class="sidenav"
       >
-        <a routerLinkActive="active" routerLink="/questionnaires"
+        <a routerLink="/questionnaires"
           ><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a
         >
-        <a routerLinkActive="active" routerLink="/user"
+        <a routerLink="/user"
           ><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a
         >
       </div>
