fix: fix email to e-mail spelling

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -89,7 +89,7 @@
               </form>
               <div class="text-center">
                 <p class="small">
-                  Verkeerde email ingevoerd?
+                  Verkeerde e-mail ingevoerd?
                   <a (click)="this.showTokenResetBody = false" routerLink="#" class="text-decoration-none">
                     Stapje terug</a
                   >
