--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -2,7 +2,7 @@
   <app-toasts></app-toasts>
   <form [formGroup]="registerForm" (ngSubmit)="createUser()">
     <div class="mb-3">
-      <label for="userEmailInput" class="form-label">Email addres</label>
+      <label for="userEmailInput" class="form-label">e-mail addres</label>
       <input type="email" class="form-control" id="userEmailInput" formControlName="registerEmail">
     </div>
     <div class="mb-3">
