--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -8,7 +8,7 @@
           <th scope="col">Naam</th>
           <th scope="col">Rol</th>
           <th scope="col">Organisatie</th>
-          <th scope="col">Email</th>
+          <th scope="col">E-mail</th>
           <th scope="col">Acties</th>
         </tr>
       </thead>
