Revert "fix: Email spelling mistake"
This reverts commit bf6467b5d8583f5f7cde796be3a23636360fa5b3.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,7 +16,7 @@
                   </div>
                   <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
                     <input class="mb-3 form-control form-control-user" type="email"
-                           placeholder="E-mail adres" formControlName="email" name="email">
+                           placeholder="Email adres" formControlName="email" name="email">
                     <input class="mb-3 form-control form-control-user" type="password"
                            placeholder="Wachtwoord" formControlName="password" name="password">
                     <button class="btn btn-primary d-block btn-user w-100 mb-2" type="submit"
