--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,4 +1,5 @@
 <div class="vh-100 bg-dark">
+  <app-toasts></app-toasts>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-9 col-lg-12 col-xl-10">
@@ -7,17 +8,6 @@
             <div class="p-5">
               <h4 class="text-center text-dark">Wachtwoord vergeten?</h4>
               <p class="text-center text-dark mb-4">Ik help je even!</p>
-              <div *ngIf="showAlert">
-                <div
-                  class="alert alert-{{ alertType }} d-flex align-items-center"
-                  role="alert"
-                >
-                  <div>
-                    <strong *ngIf="alertType == 'danger'">Foutmelding: </strong
-                    >{{ statusMessage || "Onbekende fout opgetreden!" }}
-                  </div>
-                </div>
-              </div>
               <form
                 [formGroup]="changePasswordForm"
                 (ngSubmit)="onChangePassword()"
@@ -51,17 +41,6 @@
           <div class="card-body p-0" *ngIf="showTokenResetBody">
             <div class="p-5">
               <h4 class="text-center text-dark">Nieuw wachtwoord</h4>
-              <div *ngIf="showAlert">
-                <div
-                  class="alert alert-{{ alertType }} d-flex align-items-center"
-                  role="alert"
-                >
-                  <div>
-                    <strong *ngIf="alertType == 'danger'">Foutmelding: </strong
-                    >{{ statusMessage || "Onbekende fout opgetreden!" }}
-                  </div>
-                </div>
-              </div>
               <form [formGroup]="resetTokenForm" (ngSubmit)="onResetPassword()">
                 <input
                   class="mb-3 form-control form-control-user"
