--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -33,10 +33,15 @@
       class="d-flex flex-row align-items-center navbar-nav ms-auto justify-content-md-end mb-2 mb-lg-0 text-white text-decoration-none"
     >
       <div ngbDropdown class="d-inline-block">
-        <button type="button" class="btn btn-light" id="dropdownBasic1" ngbDropdownToggle>
-          {{ user.name }}&nbsp;&nbsp;<i
-          class="bi bi-person-fill vAlignIcon"
-        ></i>
+        <button
+          type="button"
+          class="btn btn-light"
+          id="dropdownBasic1"
+          ngbDropdownToggle
+        >
+          {{ this.user.name }}&nbsp;&nbsp;<i
+            class="bi bi-person-fill vAlignIcon"
+          ></i>
         </button>
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
           <button ngbDropdownItem>Bewerk profiel</button>
