--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -15,7 +15,7 @@
                 <input
                   class="mb-3 form-control form-control-user"
                   type="email"
-                  placeholder="Email adres"
+                  placeholder="E-mail adres"
                   formControlName="email"
                   name="email"
                   ngModel
