--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.scss
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.scss
@@ -10,3 +10,12 @@ button{
 .returnButton{
   margin-bottom: 20px;
 }
+
+input{
+  width: 40%;
+}
+
+select{
+  width: 15%;
+  text-align: center;
+}
