feat: added button routing

--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button class="btn btn-outline-primary" type="button">Terug</button>
+  <button class="btn btn-outline-primary" type="button" routerLink="/questionnaires">Terug</button>
   <h1>Creëer een vragenlijst</h1>
   <div class="form-group">
     <label for="questionnaireName">Naam vragenlijst</label>
