--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -70,5 +70,5 @@
   </table>
 </div>
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  <button type="button" class="btn btn-primary">Creëer vragenlijst</button>
+  <button type="button" class="btn btn-primary" routerLink="/create-questionnaires">Creëer vragenlijst</button>
 </div>
