feat: add save entry functionality

--- a/src/app/questionnaire-fill/questionnaire-fill.component.html
+++ b/src/app/questionnaire-fill/questionnaire-fill.component.html
@@ -7,8 +7,9 @@
       Auteur: {{ questionnaire$.author.name }} -
       {{ questionnaire$.author.organization }}
     </p>
-    <app-entry-form
+    <app-entry-form #form
       [questions]="questions$ | async"
     ></app-entry-form>
+    <button type="button" class="btn btn-primary" (click)="onSubmit()">Save</button>
   </div>
 </app-navigation>
