--- a/src/app/shared/form/entry/entry-form.component.html
+++ b/src/app/shared/form/entry/entry-form.component.html
@@ -1,12 +1,8 @@
 <div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="form">
+  <form [formGroup]="form">
 
     <div *ngFor="let question of questions" class="form-row">
       <app-entry-form-question [question]="question" [form]="form"></app-entry-form-question>
-    </div>
-
-    <div class="form-row">
-      <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </form>
 
