--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -20,7 +20,7 @@
           <td>{{ questionnaire.author.name }}</td>
           <td class="text-nowrap">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-outline-primary tableIcon">
+              <button type="button" class="btn btn-outline-primary tableIcon" title="Exporteer naar CSV">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -35,7 +35,7 @@
                   />
                 </svg>
               </button>
-              <button type="button" class="btn btn-outline-primary tableIcon">
+              <button type="button" class="btn btn-outline-primary tableIcon" title="Exporteer naar PDF">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -54,7 +54,7 @@
           </td>
           <td>
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-outline-primary tableIcon">
+              <button type="button" class="btn btn-outline-primary tableIcon" title="Verwijder">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
