--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -54,7 +54,7 @@
           </td>
           <td>
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-outline-primary tableIcon" title="Verwijder">
+              <button type="button" class="btn btn-outline-primary tableIcon" (click)="delete(questionnaire.id)" title="Verwijder">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
