--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -39,7 +39,7 @@
           id="dropdownBasic1"
           ngbDropdownToggle
         >
-          {{ this.user.name }}&nbsp;&nbsp;<i
+          {{ this.user?.name }}&nbsp;&nbsp;<i
             class="bi bi-person-fill vAlignIcon"
           ></i>
         </button>
