--- a/src/app/questionnaires/questionnaires.component.scss
+++ b/src/app/questionnaires/questionnaires.component.scss
@@ -1,5 +1,10 @@
 .tableIcon {
-    color: black;
-    text-decoration: none;
-    cursor:pointer
-  }
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.2 ease-in-out;
+}
+
+.tableIcon:hover {
+  color: white;
+}
