--- a/src/app/user/user-delete/user-delete.component.html
+++ b/src/app/user/user-delete/user-delete.component.html
@@ -14,6 +14,6 @@
     </div>
     <div class="modal-footer">
       <button class="btn btn-outline-primary" type="button" (click)="activeModal.dismiss()">Nee</button>
-      <button class="btn btn-danger"  type="button" (click)="deleteUser()">Ja</button>
+      <button class="btn btn-danger deleteButton"  type="button" (click)="deleteUser()">Ja</button>
     </div>
 </div>
