--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -39,7 +39,7 @@
               </svg>
             </button>
             —&nbsp;
-            <button type="button" class="btn btn-outline-primary tableIcon" (click)="showDeleteModal(user)">
+            <button type="button" class="btn btn-outline-primary tableIcon userDeleteButton" (click)="showDeleteModal(user)">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
