--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -1,4 +1,5 @@
 <app-navigation>
+  <app-toasts></app-toasts>
   <h1>Vragenlijsten</h1>
   <div class="table-responsive">
     <table class="table table-striped">
