--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -102,8 +102,8 @@
             <div class="btn-group" role="group">
               <button
                 type="button"
-                class="btn btn-outline-primary tableIcon"
-                (click)="delete(questionnaire.id)"
+                class="btn btn-outline-primary tableIcon deleteQuestionnaireButton"
+                (click)="delete(questionnaire)"
                 title="Verwijder"
               >
                 <svg
